# pre-commit-test

./: .gitignore  .pre-commit-config.yaml  changed_files.txt  hello.py  pyproject.toml  requirements.txt  ruff.toml  test.py  test2.py
.github/workflows/: .pre-commit.yml  pre-commit-validate.yml
scripts/: main.py
